# opencode-dashboard

./: .gitignore  AGENTS.md  conv.txt  jest.config.js  jest.setup.js  markdown-text.tsx  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements-test.txt  thread.tsx  tooltip-icon-button.tsx  tsconfig.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: auto-fix-ci-with-claude.yml  ci.yml  claude.yml
.opencode/agent/: build-lint-test-fixer.md  plan-executor.md  pr-comment-resolver.md
__mocks__/: next-css.js  next-font.js
__tests__/api/: chat.test.ts  integration.test.ts  session.test.ts  sessions.test.ts  workspace.test.ts  workspaces-direct.test.ts  workspaces.test.ts
__tests__/setup/: custom-server.ts  test-server.ts  test-utils.ts
docs/: ai-sdk-api-reference.md  assistant-ui-api-reference.md  openai-chat-completions-api.md  opencode-sdk-api.md
docs/plan/: IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PARALLEL_TASKS_IMPLEMENTATION_PLAN.md  STATUS_REPORT.md  UPDATED_IMPLEMENTATION_PLAN.md  assistant-ui-localruntime-migration.md  auto-fix-ci-workflow-refactor.md  dead-code-cleanup.md  google-jules-async-agent-ui-ux-refactor.md  mobile-first-responsive-design.md  modern-ui-design-system.md  opencode-subprocess-cleanup.md  streamlined-navigation-ux.md  test-subprocess-cleanup.md  workspace-cleanup-debugging.md  (+1 more)
public/: manifest.json  sw.js
tests/: NEW_TESTS_SUMMARY.md  README.md  conftest.py  test_chat.py  test_error_handling.py  test_folders.py  test_health_endpoint.py  test_individual_endpoints.py  test_integration.py  test_models.py  test_opencode_client.py  test_opencode_server_leak.py  test_plan_endpoint.py  test_sessions.py  test_stream.py  test_tool_call_parsing.py  test_utils.py  test_workspaces.py
(+105 files in other folders)
