[project]
name = "opencode-dashboard-tests"
version = "0.1.0"
description = "API tests for opencode-dashboard web app"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-xdist>=3.0.0",
    "python-dotenv>=1.0.0",
    "portpicker>=1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "api: marks tests as API tests",
    "parallel: marks tests as safe for parallel execution",
    "serial: marks tests that must run serially (not in parallel)",
]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest-cov>=4.0.0",
]
